added final boss